#AP-2194 org admin should not invite company level users,#AP-2455 org admin should not add/edit/delete company level users,#AP-2467 sidemenu collapse expand button clickable when popup open on the screen, #AP-2459 sidemenu should highlight when user clicked on it,#AP-2460 add left padding to organization and property for sidemenu,#AP-2463 side menu not display on some of pages,#AP-2464 DSAR workflow breadcrumb alignment resolved,#AP-2466 display tooltip on expand collapse arrow button,#AP-2468 side menu orgname,property name difficult to recognize when become two lines or more

--- a/src/app/pagesettings/organizationdetails/organizationdetails.component.scss
+++ b/src/app/pagesettings/organizationdetails/organizationdetails.component.scss
@@ -231,3 +231,7 @@ span:not(:last-of-type)::after {
     -webkit-appearance: none;
     appearance: none;
 }
+
+.tr-graybg {
+    background: #f3f3f3;
+}
